# telemetry-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
notebooks/: requirements.txt
src/: main.rs
src/exporters/: csv_exporter.rs  influxdb_exporter.rs  mod.rs  parquet_exporter.rs
src/generators/: generator.rs
src/models/: mod.rs  sensor.rs  telemetry.rs
