[package]
name = "telemetry_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow="54.2.0"
arrow-array="54.2.0"
arrow-schema="54.2.0"
parquet="54.2.0"

rand="0.8"
rand_distr="0.4"
chrono="0.4.31"

influxdb2 = "0.5.2"
influxdb2-derive = "0.1.1"
influxdb2-structmap = "0.2.0"
futures-util = "0.3"

tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features = ["env-filter"]}
indicatif = "0.17.11"

clap = {version="4.5.31", features=["derive"]}
anyhow = "1.0.96"
thiserror = "2.0.11"

serde = {version="1.0.218", features=["derive"]}
tokio = {version="1.35", features=["full"]}
